# irona

./: .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  final_project_world.world  package.xml  travis.yml
ARBlock/: model.config  model.sdf
ARBlock1/: model.config  model.sdf
ARBlock10/: model.config  model.sdf
ARBlock2/: model.config  model.sdf
ARBlock3/: model.config  model.sdf
ARBlock4/: model.config  model.sdf
ARBlock5/: model.config  model.sdf
ARBlock6/: model.config  model.sdf
ARBlock7/: model.config  model.sdf
ARBlock8/: model.config  model.sdf
ARBlock9/: model.config  model.sdf
app/: CMakeLists.txt  UserInterface.cpp  WarehouseManager.cpp  main.cpp
config/: map.pgm
data/: simple_single.cpp  test_file.world
docs/: doxygen_log.txt
docs/html/: _detection_8cpp.html  _detection_8cpp__incl.map  _detection_main_8cpp.html  _detection_main_8cpp__incl.map  _detection_main_8cpp__incl.md5  _navigation_8cpp.html  _navigation_8cpp__incl.map  _navigation_8cpp__incl.md5  (+13 more)
include/: Controller.hpp  Detection.hpp  IController.hpp  IDetection.hpp  INavigation.hpp  Navigation.hpp  UserInterface.hpp  WarehouseManager.hpp
launch/: aruco.launch  detection.launch  irona.launch  navigation.launch  run_irona.launch
results/: cppcheck.txt  cpplint.txt
src/: Detection.cpp  DetectionMain.cpp  Navigation.cpp  NavigationMain.cpp  UserInterface.cpp  WarehouseManager.cpp  main.cpp
test/: CMakeLists.txt  ControllerTest.cpp  DetectionTest.cpp  NavigationTest.cpp  UserInterfaceTest.cpp  WarehouseManagerTest.cpp  launchtest.launch  test.cpp
(+59 files in other folders)
